@@ -18,3 +18,4 @@
 
 # 20240822
 - Custom Sticker support
+- Properly judge empty message
